--- a/client/src/views/ProgramPage/Program_Page.less
+++ b/client/src/views/ProgramPage/Program_Page.less
@@ -1,15 +1,23 @@
+
+
 .my-programs {
     display: flex;
     flex-direction: column;
     align-items: stretch;
     font-family: Arial, sans-serif;
     
+    color: #424242;
+    border-radius: 20px;
+    padding: 15px;
+    border: 4px solid #5BABDE;
+    
+    
     .header {
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 10px;
-      background-color: #f0f0f0;
+      
   
       .back-button {
         border: none;
@@ -25,53 +33,69 @@
       padding: 10px;
   
       .program {
-        border: 1px solid #ccc;
+        background-color: #edd367;
+        border-radius: 12px;
         padding: 10px;
         position: relative;
   
         .add-icon {
+          margin-top:12px;
           font-size: 24px;
         }
   
         &.new-program {
           text-align: center;
           cursor: pointer;
+          
+        }
+        &.new-program:hover {
+            background-color: #5BABDE;
         }
   
         .program-title {
+          font-size: 24px;
           font-weight: bold;
+          margin: 5px 5px 20px 5px;
         }
   
         .edit-button,
         .share-button {
           border: none;
+          border-radius: 12px;
           cursor: pointer;
-          padding: 5px;
+          display: inline-block;
+          padding: 8px 20px 8px 20px;
           margin-right: 5px;
+          margin-left: 5px;
           text-transform: uppercase;
+          color: #414141;
+        }
+        .edit-button:hover,
+        .share-button:hover {
+          background-color: #bfbfbf;
         }
   
-        .edit-button {
+        .edit-button,.share-button {
           background-color: #f0f0f0;
         }
   
-        .share-button {
-          background-color: #e0e0e0;
-        }
       }
   
-      .submitted {
-        background-color: #e8e8e8;
-      }
     }
   
     .footer {
       margin-top: auto;
       padding: 10px;
-      background-color: #f0f0f0;
+      
+      
       .footer-title {
-        font-size: 14px;
+        font-size: 24px;
       }
     }
+    .user-icons {
+      background-color: #3D5C82;
+    }
   }
+
+
   
