re-added My Programs header

--- a/client/src/views/ProgramPage/Program_Page.less
+++ b/client/src/views/ProgramPage/Program_Page.less
@@ -11,12 +11,12 @@
     padding: 15px;
     border: 4px solid #5BABDE;
     
-    
     .header {
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 10px;
+      font-weight: bold;
       
   
       .back-button {
