--- a/client/src/views/Student/Student.less
+++ b/client/src/views/Student/Student.less
@@ -49,6 +49,27 @@
     width: 82%;
   }
 }
+#share-item-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #colors[quaternary];
+  border: none;
+  border-radius: 5px;
+  margin: 0 auto 0.5em auto;
+  width: 80%;
+  height: 30px;
+  font-size: 2.1vh;
+  font-weight: 500;
+  color: #colors[text-primary];
+  line-height: 30px;
+  transition: 0.25s;
+  &:hover {
+    cursor: pointer;
+    background-color: #colors[quinary];
+    width: 82%;
+  }
+}
 
 ul {
   margin: 0;
@@ -223,7 +244,7 @@ li {
   font-weight: bold;
   background: #5BABDE;
   border: none;
-  width: 20%;
+  width: 40%;
 	padding: 30px;
   margin-right: 15px;
   border-radius: 5px;
@@ -263,7 +284,7 @@ li {
   font-weight: bold;
   background: #5BABDE;
   border: none;
-  width: 39%;
+  width: 40%;
 	padding: 30px;
   margin-right: 15px;
   border-radius: 5px;
